--- a/Hockey.html
+++ b/Hockey.html
@@ -22,10 +22,10 @@
     width = "350"
     height = "150"/>  
     <tr><th>Where I am now:</th></tr>
-    <tr><td>  <img src="Sabres.JPG" alt="Image of Sabres" 
+    <tr><td>  <img src="Sabres.jpg" alt="Image of Sabres" 
     width = "350"
     height = "375"/>  
-    </td><td>I was recruited to the Buffalo Jr. Sabres where I have played elite hockey until this past season which just ended.</td></tr>
+    </td><td>I was recruited to the Buffalo Jr. Sabres where I have played elite hockey until this past season, which just ended.</td></tr>
     <tr><td><img src="Images/Arrow2.png" alt="Image of arrow" 
     width = "350"
     height = "150"/> </td></tr>
