--- a/Family.html
+++ b/Family.html
@@ -23,7 +23,7 @@
   width = "350"
   height = "200"/>  
   <tr><th>My dad's side of the family</th></tr>
-  <tr><td>  <img src="Images/Disney.png" alt="Image of my dad's side of the family" 
+  <tr><td>  <img src="Disney.png" alt="Image of my dad's side of the family" 
   width = "500"
   height = "300"/>  
   </td><td>I have a stepmom named Tiffany and two younger step siblings named Ellie and Ethan.</td></tr>
