--- a/Family.html
+++ b/Family.html
@@ -30,7 +30,7 @@
   <tr><td><img src="Images/Arrow3.png" alt="Image of arrow" 
   width = "350"
   height = "200"/>  
-  <tr><th>Pets</th></tr>
+  <h3>Pets<h3>
 
 </table>
 
