--- a/Hobbies.html
+++ b/Hobbies.html
@@ -24,7 +24,7 @@
   <p>I enjoy going on hikes where there are cool sights to see.</p>
   <p>I go to the gym often so I can stay in shape.</p>
   <p>I love going to the beach and doing anything that involves nature.</p>
-  <p>I love to fly. I'm hoping one day to obtain my pilot's license.</p>
+  <p>I love to fly. I'm hoping to, one day, obtain my pilot's license.</p>
 
 
 </body>
