--- a/Family.html
+++ b/Family.html
@@ -30,9 +30,10 @@
   <tr><td><img src="Images/Arrow3.png" alt="Image of arrow" 
   width = "350"
   height = "200"/>  
+  <tr><th>Pets</th></tr>
+
 </table>
       
-  <h3>Pets<h3>
 
   
 <table>
